--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./src/app.js",
-    "dev": "nodemon ./src/app.js",    
+    "dev": "nodemon ./src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -20,7 +20,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.0",
     "next": "^15.2.0-canary.67",
-    "nodemon": "^3.1.9",
     "passport-google-oauth": "^2.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
